@@ -1,15 +1,16 @@
-// Copyright 2010 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2010, 2011 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.dao;
 
 import java.sql.*;
 import java.util.*;
 
-import org.deltava.beans.Pilot;
+import org.deltava.beans.*;
+import org.deltava.beans.stats.DispatchStatistics;
 
 /**
  * A Data Access Object to load Dispatcher Activity statistics. 
  * @author Luke
- * @version 3.2
+ * @version 3.6
  * @since 3.2
  */
 
@@ -61,29 +62,78 @@ public class GetACARSDispatchStats extends DAO {
 	
 	/**
 	 * Returns all Dispatchers who provided service between two Dates.
-	 * @param startDate the start date/time
-	 * @param endDate the end date/time, or null for the current date
+	 * @param dr the DateRange
 	 * @return a Collection of Database IDs
 	 * @throws DAOException if a JDBC error occurs
 	 */
-	public Collection<Integer> getDispatchers(java.util.Date startDate, java.util.Date endDate) throws DAOException {
-		if (endDate == null)
-			endDate = new java.util.Date();
-		
+	public Collection<DispatchStatistics> getTopDispatchers(DateRange dr) throws DAOException {
 		try {
-			prepareStatement("SELECT DISTINCT PILOT_ID FROM acars.CONS WHERE (DATE>=?) AND (DATE<=?) "
-				+ "AND (ENDDATE IS NOT NULL) AND (DISPATCH=?)");
-			_ps.setTimestamp(1, createTimestamp(startDate));
-			_ps.setTimestamp(2, createTimestamp(endDate));
-			_ps.setBoolean(3, true);
+			prepareStatement("SELECT PILOT_ID, SUM(UNIX_TIMESTAMP(IFNULL(ENDDATE, NOW()))-UNIX_TIMESTAMP(DATE)) / 3600 AS HRS "
+				+ "FROM acars.CONS WHERE (DISPATCH=?) AND (DATE >= ?) AND (ENDDATE<?) GROUP BY PILOT_ID ORDER BY HRS DESC");
+			_ps.setBoolean(1, true);
+			_ps.setTimestamp(2, createTimestamp(dr.getStartDate()));
+			_ps.setTimestamp(3, createTimestamp(dr.getEndDate()));
 			
-			Collection<Integer> results = new HashSet<Integer>();
+			// Load the Hours
+			Map<Integer, DispatchStatistics> results = new LinkedHashMap<Integer, DispatchStatistics>();
 			ResultSet rs = _ps.executeQuery();
-			while (rs.next())
-				results.add(new Integer(rs.getInt(1)));
+			while (rs.next()) {
+				DispatchStatistics ds = new DispatchStatistics(rs.getInt(1));
+				ds.setHours(rs.getDouble(2));
+				results.put(Integer.valueOf(ds.getID()), ds);
+			}
 			
 			rs.close();
 			_ps.close();
+			
+			// Load the Legs
+			prepareStatement("SELECT FD.DISPATCHER_ID, COUNT(FD.ID) FROM acars.FLIGHT_DISPATCHER FD, acars.FLIGHTS F WHERE "
+				+ " (F.ID=FD.ID) AND (F.CREATED >= ?) AND (F.CREATED<?) GROUP BY FD.DISPATCHER_ID");
+			_ps.setTimestamp(1, createTimestamp(dr.getStartDate()));
+			_ps.setTimestamp(2, createTimestamp(dr.getEndDate()));
+			rs = _ps.executeQuery();
+			while (rs.next()) {
+				DispatchStatistics ds = results.get(Integer.valueOf(rs.getInt(1)));
+				if (ds != null)
+					ds.setLegs(rs.getInt(2));
+			}
+
+			rs.close();
+			_ps.close();
+			return results.values();
+		} catch (SQLException se) {
+			throw new DAOException(se);
+		}
+	}
+	
+	/**
+	 * Returns all date ranges with dispatched flights.
+	 * @return a Collection of DateRange beans
+	 * @throws DAOException if a JDBC error occurs
+	 */
+	public Collection<DateRange> getDispatchRanges() throws DAOException {
+		try {
+			prepareStatementWithoutLimits("SELECT DISTINCT MONTH(F.CREATED), YEAR(F.CREATED) FROM acars.FLIGHTS F, "
+				+ "acars.FLIGHT_DISPATCHER FD WHERE (F.ID=FD.ID) ORDER BY F.CREATED");
+			
+			// Execute the query
+			Calendar cld = Calendar.getInstance();
+			cld.set(Calendar.DAY_OF_MONTH, 1);
+			ResultSet rs = _ps.executeQuery();
+			Collection<DateRange> years = new LinkedHashSet<DateRange>();
+			List<DateRange> results = new ArrayList<DateRange>();
+			while (rs.next()) {
+				cld.set(Calendar.MONTH, rs.getInt(1) - 1);
+				cld.set(Calendar.YEAR, rs.getInt(2));
+				java.util.Date dt = cld.getTime();
+				results.add(DateRange.createMonth(dt));
+				years.add(DateRange.createYear(dt));
+			}
+			
+			// Clean up and merge
+			rs.close();
+			_ps.close();
+			results.addAll(0, years);
 			return results;
 		} catch (SQLException se) {
 			throw new DAOException(se);
